--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="row marketing">
         <div class="col-lg-12">
-          <div id="bookmarksResolts"></div>
+          <div id="bookmarksResults"></div>
         </div>
       </div>
 
